# info

./: .all-contributorsrc  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .markdownlint.yaml  LICENCE.md  README-en.md  README-nl.md  README.md  devenv.nix  devenv.yaml  dprint.json  mkdocs.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: check.yaml  deploy.yaml
docs/: infrastructure.md  server.md
docs/licence/: CC-BY-SA-4.0-en.md  CC-BY-SA-4.0-nl.md  EUPL-1.2-en.md  EUPL-1.2-nl.md  ODbL-1.0.md
