#:schema https://json.schemastore.org/pyproject

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
description = "Technical documentation for the Youth council Zutphen."
license = "EUPL-1.2"
authors = ["Jongerenraad Zutphen <techniek@jrzutphen.nl>"]
maintainers = ["Luka Leer <luka@jrzutphen.nl>"]
readme = "README-en.md"
homepage = "https://jrzutphen.dev"
repository = "https://github.com/jrzutphen/infra"
documentation = "https://jrzutphen.dev/meta"
keywords = ["documentation", "technical", "infrastructure-as-code"]
classifiers = [
	"Development Status :: 1 - Planning",
	"Environment :: Web Environment",
	"Framework :: MkDocs",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Financial and Insurance Industry",
	"Intended Audience :: Information Technology",
	"Intended Audience :: Legal Industry",
	"Intended Audience :: Other Audience",
	"Intended Audience :: Science/Research",
	"Intended Audience :: System Administrators",
	"Intended Audience :: Telecommunications Industry",
	"License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
	"Natural Language :: Dutch",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Topic :: Artistic Software",
	"Topic :: Communications",
	"Topic :: Communications :: Chat",
	"Topic :: Communications :: Conferencing",
	"Topic :: Communications :: Email",
	"Topic :: Communications :: File Sharing",
	"Topic :: Communications :: Telephony",
	"Topic :: Database",
	"Topic :: Database :: Database Engines/Servers",
	"Topic :: Database :: Front-Ends",
	"Topic :: Documentation",
	"Topic :: Education",
	"Topic :: Education :: Computer Aided Instruction (CAI)",
	"Topic :: Education :: Testing",
	"Topic :: File Formats",
	"Topic :: File Formats :: JSON",
	"Topic :: File Formats :: JSON :: JSON Schema",
	"Topic :: Internet",
	"Topic :: Internet :: File Transfer Protocol (FTP)",
	"Topic :: Internet :: Log Analysis",
	"Topic :: Internet :: Name Service (DNS)",
	"Topic :: Internet :: Proxy Servers",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Message Boards",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
	"Topic :: Internet :: WWW/HTTP :: HTTP Servers",
	"Topic :: Internet :: WWW/HTTP :: Indexing/Search",
	"Topic :: Internet :: WWW/HTTP :: Site Management",
	"Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
	"Topic :: Multimedia",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Multimedia :: Graphics :: Capture",
	"Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
	"Topic :: Multimedia :: Graphics :: Capture :: Scanners",
	"Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
	"Topic :: Multimedia :: Graphics :: Editors",
	"Topic :: Multimedia :: Graphics :: Editors :: Raster-Based",
	"Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
	"Topic :: Multimedia :: Graphics :: Graphics Conversion",
	"Topic :: Multimedia :: Graphics :: Presentation",
	"Topic :: Multimedia :: Graphics :: Viewers",
	"Topic :: Multimedia :: Sound/Audio",
	"Topic :: Multimedia :: Sound/Audio :: Analysis",
	"Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
	"Topic :: Multimedia :: Sound/Audio :: Conversion",
	"Topic :: Multimedia :: Sound/Audio :: Editors",
	"Topic :: Multimedia :: Sound/Audio :: Mixers",
	"Topic :: Multimedia :: Sound/Audio :: Players",
	"Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
	"Topic :: Multimedia :: Sound/Audio :: Speech",
	"Topic :: Multimedia :: Video",
	"Topic :: Multimedia :: Video :: Capture",
	"Topic :: Multimedia :: Video :: Conversion",
	"Topic :: Multimedia :: Video :: Display",
	"Topic :: Multimedia :: Video :: Non-Linear Editor",
	"Topic :: Office/Business",
	"Topic :: Office/Business :: Financial",
	"Topic :: Office/Business :: Financial :: Accounting",
	"Topic :: Office/Business :: Groupware",
	"Topic :: Office/Business :: News/Diary",
	"Topic :: Office/Business :: Office Suites",
	"Topic :: Office/Business :: Scheduling",
	"Topic :: Printing",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Topic :: Scientific/Engineering :: GIS",
	"Topic :: Scientific/Engineering :: Human Machine Interfaces",
	"Topic :: Scientific/Engineering :: Image Processing",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
	"Topic :: Scientific/Engineering :: Visualization",
	"Topic :: Security",
	"Topic :: Security :: Cryptography",
	"Topic :: Software Development",
	"Topic :: Software Development :: Bug Tracking",
	"Topic :: Software Development :: Build Tools",
	"Topic :: Software Development :: Code Generators",
	"Topic :: Software Development :: Documentation",
	"Topic :: Software Development :: Internationalization",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Libraries :: Application Frameworks",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Localization",
	"Topic :: Software Development :: Pre-processors",
	"Topic :: Software Development :: Quality Assurance",
	"Topic :: Software Development :: Testing",
	"Topic :: Software Development :: Testing :: Acceptance",
	"Topic :: Software Development :: Testing :: BDD",
	"Topic :: Software Development :: Testing :: Mocking",
	"Topic :: Software Development :: Testing :: Traffic Generation",
	"Topic :: Software Development :: Testing :: Unit",
	"Topic :: Software Development :: User Interfaces",
	"Topic :: Software Development :: Version Control",
	"Topic :: Software Development :: Version Control :: Git",
	"Topic :: System",
	"Topic :: System :: Archiving",
	"Topic :: System :: Archiving :: Backup",
	"Topic :: System :: Archiving :: Compression",
	"Topic :: System :: Archiving :: Mirroring",
	"Topic :: System :: Archiving :: Packaging",
	"Topic :: System :: Benchmark",
	"Topic :: System :: Boot",
	"Topic :: System :: Filesystems",
	"Topic :: System :: Hardware",
	"Topic :: System :: Hardware :: Universal Serial Bus (USB)",
	"Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Hub",
	"Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Devices (HID)",
	"Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Mass Storage",
	"Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Miscellaneous",
	"Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Printer",
	"Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Smart Card",
	"Topic :: System :: Installation/Setup",
	"Topic :: System :: Logging",
	"Topic :: System :: Monitoring",
	"Topic :: System :: Networking",
	"Topic :: System :: Networking :: Firewalls",
	"Topic :: System :: Networking :: Monitoring",
	"Topic :: System :: Networking :: Monitoring :: Hardware Watchdog",
	"Topic :: System :: Networking :: Time Synchronization",
	"Topic :: System :: Operating System",
	"Topic :: System :: Operating System Kernels",
	"Topic :: System :: Operating System Kernels :: Linux",
	"Topic :: System :: Recovery Tools",
	"Topic :: System :: Shells",
	"Topic :: System :: Software Distribution",
	"Topic :: System :: System Shells",
	"Topic :: System :: System Administration",
	"Topic :: System :: System Administration :: Authentication/Directory",
	"Topic :: System :: System Administration :: Authentication/Directory :: LDAP",
	"Topic :: Terminals",
	"Topic :: Terminals :: Terminal Emulators/X Terminals",
	"Topic :: Text Editors",
	"Topic :: Text Editors :: Documentation",
	"Topic :: Text Editors :: Integrated Development Environments (IDE)",
	"Topic :: Text Editors :: Text Processing",
	"Topic :: Text Editors :: Word Processors",
	"Topic :: Text Processing",
	"Topic :: Text Processing :: Filters",
	"Topic :: Text Processing :: Fonts",
	"Topic :: Text Processing :: General",
	"Topic :: Text Processing :: Indexing",
	"Topic :: Text Processing :: Linguistic",
	"Topic :: Text Processing :: Markup",
	"Topic :: Text Processing :: Markup :: HTML",
	"Topic :: Text Processing :: Markup :: Markdown",
	"Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.mkdocs.dependencies]
mkdocs-material = { version = "^9.5", extras = [
	"recommended",
	"git",
	"imaging",
] }
# mkdocs-material = { git = "https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git" }
